# cookiecutter-docker-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/src/: main.py
