[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"] # Example rule sets
# Add other configurations as needed


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = "^8.3.4"
ruff = "^0.4.4" # Using a recent version of Ruff
